--- a/app/views/static_pages/postulation.html.erb
+++ b/app/views/static_pages/postulation.html.erb
@@ -2,6 +2,12 @@
 <div class="how section">
 	<div class="row main">
 		<div class="first-section" >
+		<div class="top-message">
+			<h1>La aplicación que te contacta con grupos de pasajeros para traslados diarios en vehículos VAN.</h1>
+		</div>
+		<div class="bottom-message">
+			<h1>Crece con nosotros</h1>
+		</div>
 		</div>
 		<div class="second-section">
 			<div class="post-form"><%= render '/postulations/form' %></div>
@@ -9,11 +15,49 @@
 	</div>
 </div>
 <div class="how section">
-	<div class="row main">
-		<div class="first-section" >
+	<div class=" main driver-info">
+		<div class="main-driver">
+		<div class="center-main-driver">
+			<div class="driver-section">
+				<div class="driver-image">
+					<div class="driver-info-image">
+						<%= image_tag("driver1.png", alt: "Drive")%>
+					</div>
+				</div>
+				<div class="driver-text">
+				<div class="center-driver-text">
+				<h1>Ingresos constantes</h1>
+				<h2>La estacionalidad no es una preocupación porque nuestros pasajeros utilizan Movivan diariamente. Asegura tu ingreso fijo todo el año!</h2>
+				</div>
+				</div>
+			</div>
+			<div class="driver-section">
+				<div class="driver-image">
+					<div class="driver-info-image">
+						<%= image_tag("driver2.png", alt: "Drive")%>
+					</div>
+				</div>
+				<div class="driver-text">
+				<div class="center-driver-text">
+					<h1>Soporte comercial</h1>
+					<h2>Desarrollamos y hacemos crecer la relación con los pasajeros para que tú sólo tengas que preocuparte por la operación de tu vehículo.</h2>
+				</div>
+				</div>
+			</div>
+			<div class="driver-section">
+				<div class="driver-image">
+					<div class="driver-info-image">
+						<%= image_tag("driver3.png", alt: "Drive")%>
+					</div>
+				</div>
+				<div class="driver-text">
+				<div class="center-driver-text">
+					<h1>Soporte tecnológico</h1>
+					<h2>Te proveemos de las herramientas de software que te permitirán contactar grupos de pasajeros, así como llevar el control de tus traslados.</h2>
+				</div>
+				</div>
+			</div>
 		</div>
-		<div class="second-section">
-			<div class="post-form"><%= render '/postulations/form' %></div>
 		</div>
 	</div>
 </div>
