--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -244,7 +244,10 @@ body {
   height: 80vh;
   max-height: 90vw;
   max-width: 45vh;
-  margin:auto;
+  margin-top:auto;
+  margin-bottom:auto;
+  margin-right:50px;
+  margin-left:auto;
   position: absolute;
   top:0;bottom:0;
   left:0;right:0;
@@ -257,7 +260,10 @@ body {
   height: 80vh;
   max-height: 90vw;
   max-width: 45vh;
-  margin:auto;
+  margin-top:auto;
+  margin-bottom:auto;
+  margin-right:50px;
+  margin-left:auto;
   position: absolute;
   top:0;bottom:0;
   left:0;right:0;
@@ -270,7 +276,10 @@ body {
   height: 80vh;
   max-height: 90vw;
   max-width: 45vh;
-  margin:auto;
+  margin-top:auto;
+  margin-bottom:auto;
+  margin-right:50px;
+  margin-left:auto;
   position: absolute;
   top:0;bottom:0;
   left:0;right:0;
@@ -283,7 +292,10 @@ body {
   height: 80vh;
   max-height: 90vw;
   max-width: 45vh;
-  margin:auto;
+  margin-top:auto;
+  margin-bottom:auto;
+  margin-right:50px;
+  margin-left:auto;
   position: absolute;
   top:0;bottom:0;
   left:0;right:0;
@@ -294,7 +306,10 @@ body {
   vertical-align: middle;
   height: 150px;
   width: 300px;
-  margin:auto;
+  margin-top:auto;
+  margin-bottom:auto;
+  margin-right:auto;
+  margin-left:50px;
   h1 {
     color:#693B7A;
     text-align: left;
