--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -51,11 +51,12 @@ body {
   font-variant: normal;
   font-size:15px;
   font-weight:bold;
+
 }
 
 .but-head{
   padding: 10px 21px;
-  border-radius: 24px;   
+  border-radius: 10px;   
   font-family: 'CaviarDreams';
   font-style: normal;
   font-variant: normal;
@@ -72,14 +73,6 @@ body {
     color:white;
 
   }
-}
-
-#login {
-  
-}
-
-#sign{
-  
 }
 
 .reg-but{
@@ -126,6 +119,8 @@ body {
   margin: 0 auto;
   object-fit: cover;
   padding: 0;
+  position:relative;
+  overflow:hidden;
     
 }
 
@@ -133,11 +128,11 @@ body {
   
   display: block;
   position: relative;
-
   top: 50%;
   left: 50%;
-  min-width: 100%;
-  min-height: 100%;
+  
+  max-width: 100%;
+  max-height: 100vh;
   width: auto;
   height: auto;
   z-index: -100;
@@ -146,6 +141,13 @@ body {
   pointer-events: none;
   overflow-y: hidden;
   vertical-align: top;
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -o-transform: translateX(-50%) translateY(-50%);
+    object-fit: cover;
+    right: 0; bottom: 0;
+  min-width: 100%; min-height: 100%;
+  
 }
 
 .img-main{
@@ -657,6 +659,7 @@ input {
 
 .fullpage {
   width: 100%;
+  height:100vh;
 }
 
 
