--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,21 +1,22 @@
 
-<header class="navbar navbar-fixed-top navbar-inverse navbar-nav" id="land-head" style="background-color:#ebebe0;display:none;">
+<header class="navbar navbar-fixed-top navbar-inverse navbar-nav" id="land-head" style="background-color:transparent;display:none;">
   <div class="container">
     <nav>
+      <!-- #ebebe0-->
       <ul class="nav navbar-nav navbar-right">
       <li class="li-head">
         <%= link_to image_tag("logo.png", alt: "Imagen del Curso", size:"120x19"), "#video"%>
       </li>
-       <li class="li-head">
-          <%= link_to "¿Qué es movivan?", "#about", :onclick => "document.getElementById('login').style.backgroundColor = '#ff0066'; document.getElementById('sign').style.backgroundColor = '#ff0066'; document.getElementById('cont').style.borderRight = 'solid 2px #ff0066'" %>
+       <li class="li-head" style="top:4px;">
+          <%= link_to "¿Qué es movivan?", "#about", :onclick => "document.getElementById('login').style.backgroundColor = '#ff0066'; document.getElementById('sign').style.backgroundColor = '#ff0066'; document.getElementById('cont').style.borderRight = 'solid 1px #ff0066'" %>
         </li>
 
-        <li class="li-head"><%= link_to "¿Cómo funciona?", "#how", :onclick => "document.getElementById('login').style.backgroundColor = '#660066'; document.getElementById('sign').style.backgroundColor = '#660066'; document.getElementById('cont').style.borderRight = 'solid 2px #660066'" %>
+        <li class="li-head" style="top:4px;"><%= link_to "¿Cómo funciona?", "#how", :onclick => "document.getElementById('login').style.backgroundColor = '#660066'; document.getElementById('sign').style.backgroundColor = '#660066'; document.getElementById('cont').style.borderRight = 'solid 1px #660066'" %>
         </li>
 
-        <li class="li-head"><%= link_to "Beneficios", "#benefic", :onclick => "document.getElementById('login').style.backgroundColor = '#0000cc'; document.getElementById('sign').style.backgroundColor = '#0000cc'; document.getElementById('cont').style.borderRight = 'solid 2px #0000cc'" %></li>
+        <li class="li-head" style="top:4px;"><%= link_to "Beneficios", "#benefic", :onclick => "document.getElementById('login').style.backgroundColor = '#0000cc'; document.getElementById('sign').style.backgroundColor = '#0000cc'; document.getElementById('cont').style.borderRight = 'solid 1px #0000cc'" %></li>
 
-        <li class="li-head" id="cont" style="left:-20px;"><%= link_to "Contáctanos", "#contact" %></li>
+        <li class="li-head" id="cont" style="left:-20px;top:4px;height:43px;"><%= link_to "Contáctanos", "#contact" %></li>
 
         <li class="but-head" id="login" style="left:-10px; widht:140px;"><%= link_to "Ingresa", "http://www.movivan.pe/auth/login" %></li>
         <li class="but-head" id="sign"><%= link_to "Registra tu van", '/postulation'%></li>
