--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,14 +9,14 @@
 		<%= image_tag("movivan.png", alt: "Imagen de noticia",:class => "img-name bar fadeInUp", size:"220x45")%>
 		<p class="page-slogan bar fadeInUp">
 			Tu viaje cotidiano convertido en <br>
-			la mejor experiencia con seguridad y confort.
+			una experiencia con seguridad y confort.
 		</p>
 
 		<p class="mov-slogan bar fadeInUp">
 			Déjate llevar
 		</p>
 		<li class="reg-but bar fadeInUp">
-			<%= link_to "Regístrate aquí", '/postulation' %>
+			<%= link_to "Regístrate aquí", "http://www.movivan.pe/auth/signup" %>
 		</li>
     	
 	</div>
