Change post header and text driver

--- a/app/views/static_pages/postulation.html.erb
+++ b/app/views/static_pages/postulation.html.erb
@@ -21,39 +21,39 @@
 			<div class="driver-section">
 				<div class="driver-image">
 					<div class="driver-info-image">
-						<%= image_tag("driver1.png", alt: "Drive")%>
+						<%= image_tag("driver1.png", alt: "Drive", size:"105x107")%>
 					</div>
 				</div>
 				<div class="driver-text">
 				<div class="center-driver-text">
-				<h1>Ingresos constantes</h1>
-				<h2>La estacionalidad no es una preocupación porque nuestros pasajeros utilizan Movivan diariamente. Asegura tu ingreso fijo todo el año!</h2>
+				<h1 style="font-size:32px;">Ingresos constantes</h1>
+				<h2 style="font-size:22px;">La estacionalidad no es una preocupación porque nuestros pasajeros utilizan Movivan diariamente. Asegura tu ingreso fijo todo el año!</h2>
 				</div>
 				</div>
 			</div>
 			<div class="driver-section">
 				<div class="driver-image">
 					<div class="driver-info-image">
-						<%= image_tag("driver2.png", alt: "Drive")%>
+						<%= image_tag("driver2.png", alt: "Drive", size:"104x105")%>
 					</div>
 				</div>
 				<div class="driver-text">
 				<div class="center-driver-text">
-					<h1>Soporte comercial</h1>
-					<h2>Desarrollamos y hacemos crecer la relación con los pasajeros para que tú sólo tengas que preocuparte por la operación de tu vehículo.</h2>
+					<h1 style="font-size:32px;">Soporte comercial</h1>
+					<h2 style="font-size:22px;">Desarrollamos y hacemos crecer la relación con los pasajeros para que tú sólo tengas que preocuparte por la operación de tu vehículo.</h2>
 				</div>
 				</div>
 			</div>
 			<div class="driver-section">
 				<div class="driver-image">
 					<div class="driver-info-image">
-						<%= image_tag("driver3.png", alt: "Drive")%>
+						<%= image_tag("driver3.png", alt: "Drive", size:"105x105")%>
 					</div>
 				</div>
 				<div class="driver-text">
 				<div class="center-driver-text">
-					<h1>Soporte tecnológico</h1>
-					<h2>Te proveemos de las herramientas de software que te permitirán contactar grupos de pasajeros, así como llevar el control de tus traslados.</h2>
+					<h1 style="font-size:32px;">Soporte tecnológico</h1>
+					<h2 style="font-size:22px;">Te proveemos de las herramientas de software que te permitirán contactar grupos de pasajeros, así como llevar el control de tus traslados.</h2>
 				</div>
 				</div>
 			</div>
