--- a/app/views/layouts/_postulationheader.html.erb
+++ b/app/views/layouts/_postulationheader.html.erb
@@ -7,7 +7,7 @@
       <ul class="nav navbar-nav navbar-right">
 
       	<button type="button" class="btn btn-default navbar-btn postulation-button">Ingresa a tu cuenta</button>
-      	<button type="button" class="btn btn-default navbar-btn postulation-button">Eres pasajero?</button>
+      	<button type="button" class="btn btn-default navbar-btn postulation-button">Regresar</button>
 
       </ul>
     </nav>
