--- a/app/views/layouts/_postulationheader.html.erb
+++ b/app/views/layouts/_postulationheader.html.erb
@@ -6,9 +6,8 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
 
-      	<button type="button" class="btn btn-default navbar-btn postulation-button">Ingresa a tu cuenta</button>
-      	<button type="button" class="btn btn-default navbar-btn postulation-button">Regresar</button>
-
+      	<a href="http://www.movivan.pe/auth/login"><button type="button" class="btn btn-default navbar-btn postulation-button">Ingresa a tu cuenta</button></a>
+      	<a href="/"><button type="button" class="btn btn-default navbar-btn postulation-button">Regresar</button></a>
       </ul>
     </nav>
   </div>
