--- a/app/views/static_pages/postulation.html.erb
+++ b/app/views/static_pages/postulation.html.erb
@@ -26,8 +26,8 @@
 				</div>
 				<div class="driver-text">
 				<div class="center-driver-text">
-				<h1 style="font-size:32px;">Ingresos constantes</h1>
-				<h2 style="font-size:22px;">La estacionalidad no es una preocupación porque nuestros pasajeros utilizan Movivan diariamente. Asegura tu ingreso fijo todo el año!</h2>
+				<h1>Ingresos constantes</h1>
+				<h2>La estacionalidad no es una preocupación porque nuestros pasajeros utilizan Movivan diariamente. Asegura tu ingreso fijo todo el año!</h2>
 				</div>
 				</div>
 			</div>
@@ -39,8 +39,8 @@
 				</div>
 				<div class="driver-text">
 				<div class="center-driver-text">
-					<h1 style="font-size:32px;">Soporte comercial</h1>
-					<h2 style="font-size:22px;">Desarrollamos y hacemos crecer la relación con los pasajeros para que tú sólo tengas que preocuparte por la operación de tu vehículo.</h2>
+					<h1>Soporte comercial</h1>
+					<h2>Desarrollamos y hacemos crecer la relación con los pasajeros para que tú sólo tengas que preocuparte por la operación de tu vehículo.</h2>
 				</div>
 				</div>
 			</div>
@@ -52,8 +52,8 @@
 				</div>
 				<div class="driver-text">
 				<div class="center-driver-text">
-					<h1 style="font-size:32px;">Soporte tecnológico</h1>
-					<h2 style="font-size:22px;">Te proveemos de las herramientas de software que te permitirán contactar grupos de pasajeros, así como llevar el control de tus traslados.</h2>
+					<h1>Soporte tecnológico</h1>
+					<h2>Te proveemos de las herramientas de software que te permitirán contactar grupos de pasajeros, así como llevar el control de tus traslados.</h2>
 				</div>
 				</div>
 			</div>
