--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -65,11 +65,11 @@ body {
   border: 0;
   width: 140px;
   right:8px;
-  height:40px;
-  margin-top:5px;
+  height:30px;
+  margin-top:13px;
 
   a:link{
-    margin-top:-6px;
+    margin-top:-10px;
     color:white;
 
   }
@@ -86,7 +86,7 @@ body {
   background-color:#660066;
   border: 0;
   width: 180px;
-  margin-top:-21%;
+  margin-top:-20%;
   left: 0;
   right: 0;
   margin-right: auto;
@@ -94,7 +94,7 @@ body {
   font-size:18px;
   opacity:0.8;
   list-style:none;
-  height:55px;
+  height:42px;
   a:hover{
     color:white;
   }
@@ -377,6 +377,7 @@ body {
     top:0;bottom:0;
     left:0;right:0;
     position: relative;
+    margin-top:50px;
 }
 
 .cont-text {
@@ -491,11 +492,19 @@ a:visited {
   color:white;
 }
 
+.navbar-nav > #login >a:visited{
+  color:white;
+}
+
 
 .navbar-nav > #sign >a:link{
   color:white;
 }
 .navbar-nav > #sign >a:hover{
+  color:white;
+}
+
+.navbar-nav > #sign >a:visited{
   color:white;
 }
 
