--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,19 +4,19 @@
     <nav>
       <!-- #ebebe0-->
       <ul class="nav navbar-nav navbar-right">
-      <li class="li-head">
+      <li class="li-head" style="margin-top:-4px;">
         <%= link_to image_tag("logo.png", alt: "Imagen del Curso", size:"120x24"), "#video"%>
       </li>
        <li class="li-head" style="top:4px;">
-          <%= link_to "¿Qué es movivan?", "#about", :onclick => "document.getElementById('login').style.backgroundColor = '#ff0066'; document.getElementById('sign').style.backgroundColor = '#ff0066'; document.getElementById('cont').style.borderRight = 'solid 1px #ff0066'" %>
+          <%= link_to "¿Qué es Movivan?", "#about", :onclick => "document.getElementById('login').style.backgroundColor = '#ff0066'; document.getElementById('sign').style.backgroundColor = '#ff0066'; document.getElementById('cont').style.borderRight = 'solid 1px #ff0066'" %>
         </li>
 
-        <li class="li-head" style="top:4px;"><%= link_to "¿Cómo funciona?", "#how", :onclick => "document.getElementById('login').style.backgroundColor = '#660066'; document.getElementById('sign').style.backgroundColor = '#660066'; document.getElementById('cont').style.borderRight = 'solid 1px #660066'" %>
+        <li class="li-head" style="top:4px;left:15px;"><%= link_to "¿Cómo funciona?", "#how", :onclick => "document.getElementById('login').style.backgroundColor = '#660066'; document.getElementById('sign').style.backgroundColor = '#660066'; document.getElementById('cont').style.borderRight = 'solid 1px #660066'" %>
         </li>
 
-        <li class="li-head" style="top:4px;"><%= link_to "Beneficios", "#benefic", :onclick => "document.getElementById('login').style.backgroundColor = '#0000cc'; document.getElementById('sign').style.backgroundColor = '#0000cc'; document.getElementById('cont').style.borderRight = 'solid 1px #0000cc'" %></li>
+        <li class="li-head" style="top:4px;left:9px;"><%= link_to "Beneficios", "#benefic", :onclick => "document.getElementById('login').style.backgroundColor = '#0000cc'; document.getElementById('sign').style.backgroundColor = '#0000cc'; document.getElementById('cont').style.borderRight = 'solid 1px #0000cc'" %></li>
 
-        <li class="li-head" id="cont" style="left:-20px;top:4px;height:43px;"><%= link_to "Contáctanos", "#contact" %></li>
+        <li class="li-head" id="cont" style="left:-20px;top:4px;height:43px;border-right:solid 1px #ff0066;"><%= link_to "Contáctanos", "#contact" %></li>
 
         <li class="but-head" id="login" style="left:-10px; widht:140px;"><%= link_to "Ingresa", "http://www.movivan.pe/auth/login" %></li>
         <li class="but-head" id="sign"><%= link_to "Registra tu van", '/postulation'%></li>
