Change footer style

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
-<footer class="footer">
+<footer class="footer" style="width:100vw; background-color:gray;">
    	<nav>
-    	<ul>
+    	<ul class="nav navbar-nav navbar-right">
       		<li><%= link_to "Términos y condiciones de servicios" %></li>
           <li><%= link_to "Movivan 2015 Derechos Reservados"%></li>
           <li><%= link_to "Política de Privacidad" %></li>
