--- a/app/views/layouts/_postulationheader.html.erb
+++ b/app/views/layouts/_postulationheader.html.erb
@@ -7,7 +7,7 @@
       <ul class="nav navbar-nav navbar-right">
 
       	<a href="http://www.movivan.pe/auth/login"><button type="button" class="btn btn-default navbar-btn postulation-button">Ingresa a tu cuenta</button></a>
-      	<a href="/"><button type="button" class="btn btn-default navbar-btn postulation-button">Regresar</button></a>
+      	<a href="/"><button type="button" class="btn btn-default navbar-btn postulation-button">Regresar a pasajero</button></a>
       </ul>
     </nav>
   </div>
