--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,8 +8,8 @@
 		<%= image_tag("lam.png", alt: "Imagen de noticia",:class => "img-main bar fadeInUp", size:"177x102")%>
 		<%= image_tag("movivan.png", alt: "Imagen de noticia",:class => "img-name bar fadeInUp", size:"232x42")%>
 		<p class="page-slogan bar fadeInUp">
-			Tu viaje cotidiano convertido en <br>
-			una experiencia con seguridad y confort.
+			Una nueva experiencia en tu viaje cotidiano: <br>
+			confortable, seguro y accesible
 		</p>
 
 		<p class="mov-slogan bar fadeInUp">
@@ -100,7 +100,7 @@
 </div>
 
 <div class="section">
-<div class="contact" id="contact">
+<div class="contact"  id="contact" style="margin-top:50px;">
 	<div class="cont-bkgr">
 		<div class="cont-text"></div>
 	</div>
