--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -77,7 +77,7 @@ body {
 
 .reg-but{
   padding: 10px 21px;
-  border-radius: 24px;   
+  border-radius: 6px;   
   font-family: 'CaviarDreams';
   font-style: normal;
   font-variant: normal;
@@ -86,7 +86,7 @@ body {
   background-color:#660066;
   border: 0;
   width: 180px;
-  margin-top:-20%;
+  margin-top:-12%;
   left: 0;
   right: 0;
   margin-right: auto;
@@ -175,10 +175,10 @@ body {
 .page-slogan{
   position:absolute;
   color:white;
-  font-size:18px;
+  font-size:20px;
   font-family:'CaviarDreams'; 
   text-align:center;
-  margin-top:-29%;
+  margin-top:-25%;
   
   opacity:0.7; 
   left: 0;
@@ -189,10 +189,10 @@ body {
 .mov-slogan{
   position:absolute;
   color:white;
-  font-size:30px;
+  font-size:33px;
   font-family:'CaviarDreams'; 
   text-align:center;
-  margin-top:-24%;
+  margin-top:-18%;
   opacity:0.7; 
   left: 0;
   right: 0;
@@ -494,6 +494,10 @@ a:visited {
 
 .navbar-nav > #login >a:visited{
   color:white;
+}
+
+.navbar-nav > #cont >a:link{
+  top:-6px;
 }
 
 
