--- a/app/views/static_pages/postulation.html.erb
+++ b/app/views/static_pages/postulation.html.erb
@@ -26,7 +26,7 @@
 				</div>
 				<div class="driver-text">
 				<div class="center-driver-text">
-				<h1>Ingresos constantes</h1>
+				<h1 style="font-weight:bold;">Ingresos constantes</h1>
 				<h2>La estacionalidad no es una preocupación porque nuestros pasajeros utilizan Movivan diariamente. Asegura tu ingreso fijo todo el año!</h2>
 				</div>
 				</div>
@@ -39,7 +39,7 @@
 				</div>
 				<div class="driver-text">
 				<div class="center-driver-text">
-					<h1>Soporte comercial</h1>
+					<h1 style="font-weight:bold;">Soporte comercial</h1>
 					<h2>Desarrollamos y hacemos crecer la relación con los pasajeros para que tú sólo tengas que preocuparte por la operación de tu vehículo.</h2>
 				</div>
 				</div>
@@ -52,7 +52,7 @@
 				</div>
 				<div class="driver-text">
 				<div class="center-driver-text">
-					<h1>Soporte tecnológico</h1>
+					<h1 style="font-weight:bold;">Soporte tecnológico</h1>
 					<h2>Te proveemos de las herramientas de software que te permitirán contactar grupos de pasajeros, así como llevar el control de tus traslados.</h2>
 				</div>
 				</div>
