--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -35,7 +35,25 @@
   <div class="form-group col-md-4 col-md-offset-4 share">
     <h2>Síguenos en <%= link_to image_tag("fb.png", alt: "Compartir en Facebook"),
             'https://www.facebook.com/Movivan-427637314086247/?fref=ts' %> <%= link_to image_tag("youtube.png", alt: "Compartir en Youtube"),
-            'https://www.youtube.com/channel/UCpfPdw3w9xLHahhlqNVrnbw?app=desktop' %></h2>
+            'https://www.youtube.com/channel/UCpfPdw3w9xLHahhlqNVrnbw?app=desktop' %>
+      <style>
+        ul#menu li {
+          display:inline;
+          margin-right:20px;
+        }
+      </style>
+        <ul id="menu" style="width:100vw;color:#00BD00;text-align:left;margin-left:-400px;">
+           <li>TÉRMINOS Y CONDICIONES DE SERVICIOS</li>
+           <li>MOVIVAN 2016 DERECHOS RESERVADOS. DISEÑO Y DIAGRAMACIÓN ICREAVISUAL</li>
+           <li>POLÍTICAS DE PRIVACIDAD</li>
+           <li>LIBRO DE RECLAMACIONES</li>
+        </ul>
+            
+    </h2>
+
+    
+
+
   </div>
 
   
