Add test video second page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -27,6 +27,12 @@
 		<%= render 'layouts/header' %>
 		<div class="how-main" style="margin-top:75px;">
 			<div class="about-bkgr">
+				<div class="video-container">
+                        <div class="video" style="margin-left:47px;">
+                            <iframe width="580" height="360" src="https://www.youtube.com/embed/jTWd6FGBPKU" frameborder="0"></iframe>
+                        </div>
+
+                    </div>
 			</div>
 		</div>
 		<div class="how-main" >
