--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -37,6 +37,20 @@
 		</div>
 		<div class="how-main" >
 			<div class="about-text">
+				<h1 style="color:#ff0066;">
+					Confortable. Seguro. Accesible <br>
+					<p > 
+						¿Qué es Movivan?
+					</p>
+				</h1>
+
+				<h3>
+					Con Movivan te trasladas de tu casa al trabajo <br>
+					y viceversa, mediante vehículos Van.
+				</h3>
+				<h2>
+					"Con Movivan inicias y terminas un día sin estrés, con tarifas muy accesibles y sin preocupaciones."
+				</h2>
 			</div>
 		</div>
 	</div>
