--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -29,7 +29,7 @@
 			<div class="about-bkgr">
 				<div class="video-container">
                         <div class="video" style="margin-left:47px;">
-                            <iframe width="580" height="360" src="https://www.youtube.com/embed/jTWd6FGBPKU" frameborder="0"></iframe>
+                            <iframe width="580" height="360" src="https://www.youtube.com/embed/who5eJU7KQo" frameborder="0"></iframe>
                         </div>
 
                     </div>
