Change link style header

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -61,7 +61,7 @@ body {
   font-style: normal;
   font-variant: normal;
   color:white;
-  background-color: #ff0066;
+  background-color: #d7006e;
   border: 0;
   width: 140px;
   right:8px;
@@ -548,35 +548,6 @@ a:visited {
 .navbar-nav > #cont >a:link{
   top:-6px;
 }
-
-.navbar-nav > #what >a:link{
-  color:#ff0066;
-}
-
-.navbar-nav > #what >a:hover{
-  color:#ff0066;
-}
-
-.navbar-nav > #what >a:active{
-  color:#ff0066;
-}
-
-.navbar-nav > #como >a:link{
-  color:#660066;
-}
-
-.navbar-nav > #como >a:hover{
-  color:#660066;
-}
-
-.navbar-nav > #ben >a:link{
-  color:#0000cc;
-}
-
-.navbar-nav > #ben >a:hover{
-  color:#0000cc;
-}
-
 
 .navbar-nav > #sign >a:link{
   color:white;
