--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,15 +8,24 @@
         <%= link_to image_tag("logo.png", alt: "Imagen del Curso", size:"120x24"), "#video"%>
       </li>
        <li class="li-head" style="top:4px;" id="what">
-          <%= link_to "¿Qué es Movivan?", "#about", :onclick => "document.getElementById('login').style.backgroundColor = '#d7006e'; document.getElementById('sign').style.backgroundColor = '#d7006e'; document.getElementById('cont').style.borderRight = 'solid 1px #d7006e'" %>
+          <a id="whatlink" onclick="document.getElementById('login').style.backgroundColor = '#d7006e'; document.getElementById('sign').style.backgroundColor = '#d7006e'; document.getElementById('cont').style.borderRight = 'solid 1px #d7006e'; document.getElementById('whatlink').style.color = '#d7006e';document.getElementById('howlink').style.color = '#777';document.getElementById('benlink').style.color = '#777';document.getElementById('contlink').style.color = '#777'" href="#about">¿Qué es Movivan?</a>
         </li>
 
-        <li class="li-head" style="top:4px;left:20px;" id="como"><%= link_to "¿Cómo funciona?", "#how", :onclick => "document.getElementById('login').style.backgroundColor = '#693b7b'; document.getElementById('sign').style.backgroundColor = '#693b7b'; document.getElementById('cont').style.borderRight = 'solid 1px #693b7b'" %>
+        <li class="li-head" style="top:4px;left:20px;" id="como">
+          <a id="howlink" onclick="document.getElementById('login').style.backgroundColor = '#693b7b'; document.getElementById('sign').style.backgroundColor = '#693b7b'; document.getElementById('cont').style.borderRight = 'solid 1px #693b7b'; document.getElementById('howlink').style.color = '#693b7b'; document.getElementById('whatlink').style.color = '#777'; document.getElementById('benlink').style.color = '#777'; document.getElementById('contlink').style.color = '#777'" href="#how">¿Cómo funciona?</a>
+
         </li>
 
-        <li class="li-head" style="top:4px;left:15px;" id="ben"><%= link_to "Beneficios", "#benefic", :onclick => "document.getElementById('login').style.backgroundColor = '#0074e6'; document.getElementById('sign').style.backgroundColor = '#0074e6'; document.getElementById('cont').style.borderRight = 'solid 1px #0074e6'" %></li>
+        <li class="li-head" style="top:4px;left:15px;" id="ben">
+          <a id="benlink" onclick="document.getElementById('login').style.backgroundColor = '#0074e6'; document.getElementById('sign').style.backgroundColor = '#0074e6'; document.getElementById('cont').style.borderRight = 'solid 1px #0074e6'; document.getElementById('benlink').style.color = '#0074e6';document.getElementById('whatlink').style.color = '#777'; document.getElementById('howlink').style.color = '#777';document.getElementById('contlink').style.color = '#777'" href="#benefic">Beneficios</a>
+        </li>
 
-        <li class="li-head" id="cont" style="left:-20px;top:10px;height:35px;border-right:solid 1px #d7006e;padding-left:34px;"><%= link_to "Contáctanos", "#contact" %></li>
+
+        <li class="li-head" id="cont" style="left:-20px;top:10px;height:35px;border-right:solid 1px #d7006e;padding-left:34px;">
+         
+          <a id="contlink" onclick="document.getElementById('login').style.backgroundColor = '#693b7b'; document.getElementById('sign').style.backgroundColor = '#693b7b'; document.getElementById('cont').style.borderRight = 'solid 1px #693b7b'; document.getElementById('contlink').style.color = '#693b7b';document.getElementById('whatlink').style.color = '#777'; document.getElementById('howlink').style.color = '#777';document.getElementById('benlink').style.color = '#777'" href="#contact">Contáctanos</a>
+
+        </li>
 
         <li class="but-head" id="login" style="left:-10px; widht:140px;"><%= link_to "Ingresa", "http://www.movivan.pe/auth/login" %></li>
         <li class="but-head" id="sign"><%= link_to "Registra tu van", '/postulation'%></li>
