--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -37,19 +37,20 @@
 		</div>
 		<div class="how-main" >
 			<div class="about-text">
-				<h1 style="color:#ff0066;">
+				<h1 >
 					Confortable. Seguro. Accesible <br>
-					<p > 
-						¿Qué es Movivan?
-					</p>
 				</h1>
-
-				<h3>
-					Con Movivan te trasladas de tu casa al trabajo <br>
-					y viceversa, mediante vehículos Van.
-				</h3>
-				<h2>
-					"Con Movivan inicias y terminas un día sin estrés, con tarifas muy accesibles y sin preocupaciones."
+				
+				<form>
+ 					<fieldset>
+  						<legend>¿Qué es Movivan?</legend>
+							Con Movivan te trasladas de tu casa al trabajo <br>
+							y viceversa, mediante vehículos Van.
+  
+ 					</fieldset>
+				</form>
+				<h2 style="font-size:1.3em;">
+					"Con Movivan inicias y terminas un día <b>sin estrés,</b> <br> <h2 style="font-size:1.3em;margin-top:-20px;text-align:right;">con <b>tarifas muy accesibles</b> y <b>sin preocupaciones."</b></h2>
 				</h2>
 			</div>
 		</div>
