--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -435,13 +435,14 @@ fieldset{
 /* Contact */
 
 .contact {
-  background-image: image-url('contact_background.png');
+  
   width: 100vw;
   background-size: 100% 100%;
   height: 100vh;
   position: relative;
   margin-left: -15px;
-  background-color: $gray;
+  background-color:#F5F5F5;
+  
 }
 
 .cont-bkgr{
@@ -457,23 +458,35 @@ fieldset{
 
 .cont-text {
 margin-top:200px;
-    background-image: image-url('contact_text.png');
+    display:inline-block;
   background-size: 100% 100%;
-  width: 100%; /* 90% of viewport vidth */
+  width: 50%; /* 90% of viewport vidth */
     height: 30%; /* ratio = 9/16 * 90 = 50.625  0.38* 90*/
   max-height: 50%;
     max-width: 200%; /* 16/9 * 90 = 160  2.60 * 90 */
-    position: absolute;
+    float:left;
     top:0;bottom:0;
     left:0;right:0;
+    text-align: center;
+    font-size: 1.4em;
+    font-family: 'CaviarDreams';
+    p{
+      font-family: 'CaviarDreams'; 
+      font-size: 17px; 
+      width:30%; 
+      margin-left: auto;
+      margin-right: auto;
+      margin-top:20px;
+    }
+
 }
 
 .cont-form {
   background-size: 100% 100%;
   width: 100vw;
-  height: 30%;
+  height: 15%;
   background-color:$gray;
-  margin-top: 0px;
+  margin-top: 10%;
     top:0;bottom:0;
     left:0;right:0;
 }
