--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -12,28 +12,9 @@
     </div>
   <% end %>
  
- <div class="cont-label">
-   <h1>Escríbenos y con gusto nos contactaremos contigo en la brevedad.</h1>
- </div>
-
-  <div class="form-group contact-inputs">
-     <div class="contact-row">
-       <%= f.text_field :name, :placeholder => "nombre", class: "form-control" %>
-     </div>
-     <div class="contact-row">
-       <%= f.text_field :email, :placeholder => "correo", class: "form-control" %>
-     </div>
-     <div class="contact-row">
-       <%= f.text_field :phone, :placeholder => "celular", class: "form-control" %>
-     </div>
-     <div class="contact-button">
-      <%= submit_tag("Enviar", disable_with: "Guardando", class: "btn btn-link save")%>
-    </div>
-   </div>
-
-
+ 
   <div class="form-group col-md-4 col-md-offset-4 share">
-    <h2>Síguenos en <%= link_to image_tag("fb.png", alt: "Compartir en Facebook"),
+    <h2 style="margin-top:30px;">Síguenos en <%= link_to image_tag("fb.png", alt: "Compartir en Facebook"),
             'https://www.facebook.com/Movivan-427637314086247/?fref=ts' %> <%= link_to image_tag("youtube.png", alt: "Compartir en Youtube"),
             'https://www.youtube.com/channel/UCpfPdw3w9xLHahhlqNVrnbw?app=desktop' %>
       <style>
