--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row section">
 	<div class="abc" id="video">
-		<%= video_tag "videoLanding.ogv" , :autoplay => true, :muted => true, :loop => true, class:"fullscreen-bg__video" %>
+		<%= video_tag "videolanding.ogv" , :autoplay => true, :muted => true, :loop => true, class:"fullscreen-bg__video" %>
 		<%= image_tag("lam.png", alt: "Imagen de noticia",:class => "img-main bar fadeInUp", size:"213x123")%>
 		<%= image_tag("movivan.png", alt: "Imagen de noticia",:class => "img-name bar fadeInUp", size:"232x42")%>
 		<p class="page-slogan bar fadeInUp">
