--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -27,7 +27,9 @@
            <li>TÉRMINOS Y CONDICIONES DE SERVICIOS</li>
            <li>MOVIVAN 2016 DERECHOS RESERVADOS. DISEÑO Y DIAGRAMACIÓN ICREAVISUAL</li>
            <li>POLÍTICAS DE PRIVACIDAD</li>
-           <li>LIBRO DE RECLAMACIONES</li>
+           <li>
+            <a href="/book" style="color:#00BD00;">LIBRO DE RECLAMACIONES</a>
+            </li>
         </ul>
             
     </h2>
