--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -129,7 +129,8 @@
 		</div>
 		<div class="cont-text" >
 			<u style="font-size:1.5em;">Carreras </u><br>
-			<p style="width:50%;">En Movivan nos mueve la pasión por la tecnología y la innovación y estamos en busca de talentos como tú para diversas disciplinas</p>
+			<p style="width:50%;">En Movivan nos mueve la pasión por la tecnología y la innovación y estamos en busca de talentos como tú para diversas disciplinas.<br>
+				Escríbenos a <b>carreras@movivan.pe</b></p>
 		</div>
 	</div>
 	
