--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -77,7 +77,7 @@ fieldset{
   font-variant: normal;
   font-size:15px;
   font-weight:bold;
-
+  list-style:none;
 }
 
 .but-head{
@@ -456,6 +456,27 @@ fieldset{
     
 }
 
+.book-row{
+  width:100%;
+  margin-top:50px;
+  height:50px;
+}
+.book-desc{
+  margin-top:35px;
+  width:100vw;
+  font-family: 'CaviarDreams';
+  font-size: 17px; 
+}
+
+.book-data{
+  width:50%;
+  display:inline-block;
+  float:left;
+  font-family: 'CaviarDreams';
+  font-size: 17px; 
+  margin-top:20px;
+}
+
 .cont-text {
 margin-top:200px;
     display:inline-block;
@@ -730,6 +751,18 @@ input, textarea, select, .uneditable-input {
   border: 1px solid #bbb;
   margin-bottom: 15px;
   @include box_sizing;
+  display:block;
+}
+
+input[type=button] {
+    padding:5px 15px; 
+    background:#009900; 
+    border:0 none;
+    cursor:pointer;
+    -webkit-border-radius: 5px;
+    border-radius: 5px; 
+    width:100px;
+    color:white;
 }
 
 input {
