--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -170,13 +170,17 @@
 	var scroll_pos = 0;
     var animation_begin_pos = 0; //where you want the animation to begin
     var animation_end_pos = 5000; //where you want the animation to stop
+    var factor=0;
+    var tamDiv=$(window).height()+15;
     
     $(document).scroll(function() {
         scroll_pos = $(this).scrollTop(); 
+
+        factor=tamDiv/screen.height;
         if(scroll_pos >= animation_begin_pos && scroll_pos <= animation_end_pos ) { 
-           // console.log( 'scrolling and animating' );
+            console.log( factor );
             //we want to calculate the relevant transitional rgb value
-            if(scroll_pos >= 0 && scroll_pos <= 1365){
+            if(scroll_pos >= 0 && scroll_pos < 2*(tamDiv*factor)){
             	document.getElementById('login').style.backgroundColor = "#d7006e";
             	document.getElementById('sign').style.backgroundColor = "#d7006e";
             	document.getElementById('cont').style.borderRight = "solid 1px #d7006e"
@@ -185,7 +189,7 @@
             	document.getElementById('benlink').style.color = '#777'; 
             	document.getElementById('contlink').style.color = '#777'
             }
-            else if(scroll_pos >= 1366 && scroll_pos <=4097){
+            else if(scroll_pos >= 2*(tamDiv*factor) && scroll_pos <6*(tamDiv*factor)){
             	document.getElementById('login').style.backgroundColor = "#693b7b"; 
             	document.getElementById('sign').style.backgroundColor = "#693b7b"; 
             	document.getElementById('cont').style.borderRight = "solid 1px #693b7b"; 
@@ -195,7 +199,7 @@
             	document.getElementById('contlink').style.color = '#777';
             }
 
-            else if(scroll_pos >= 4098 && scroll_pos <=4780){
+            else if(scroll_pos >= 6*(tamDiv*factor) && scroll_pos < 7*(tamDiv*factor)){
             	document.getElementById('login').style.backgroundColor = "#0074e6"; 
             	document.getElementById('sign').style.backgroundColor = "#0074e6"; 
             	document.getElementById('cont').style.borderRight = "solid 1px #0074e6";
@@ -206,7 +210,7 @@
 
             }
 
-            else if(scroll_pos >= 4781){
+            else if(scroll_pos >= 7*(tamDiv*factor)){
             	document.getElementById('login').style.backgroundColor = "#693b7b"; 
             	document.getElementById('sign').style.backgroundColor = "#693b7b"; 
             	document.getElementById('cont').style.borderRight = "solid 1px #693b7b"; 
