--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -180,7 +180,7 @@
         if(scroll_pos >= animation_begin_pos && scroll_pos <= animation_end_pos ) { 
             console.log( factor );
             //we want to calculate the relevant transitional rgb value
-            if(scroll_pos >= 0 && scroll_pos < 2*(tamDiv*factor)){
+            if(scroll_pos >= 0 && scroll_pos < 2*(tamDiv)){
             	document.getElementById('login').style.backgroundColor = "#d7006e";
             	document.getElementById('sign').style.backgroundColor = "#d7006e";
             	document.getElementById('cont').style.borderRight = "solid 1px #d7006e"
@@ -189,7 +189,7 @@
             	document.getElementById('benlink').style.color = '#777'; 
             	document.getElementById('contlink').style.color = '#777'
             }
-            else if(scroll_pos >= 2*(tamDiv*factor) && scroll_pos <6*(tamDiv*factor)){
+            else if(scroll_pos >= 2*(tamDiv) && scroll_pos <6*(tamDiv)){
             	document.getElementById('login').style.backgroundColor = "#693b7b"; 
             	document.getElementById('sign').style.backgroundColor = "#693b7b"; 
             	document.getElementById('cont').style.borderRight = "solid 1px #693b7b"; 
@@ -199,7 +199,7 @@
             	document.getElementById('contlink').style.color = '#777';
             }
 
-            else if(scroll_pos >= 6*(tamDiv*factor) && scroll_pos < 7*(tamDiv*factor)){
+            else if(scroll_pos >= 6*(tamDiv) && scroll_pos < 7*(tamDiv)){
             	document.getElementById('login').style.backgroundColor = "#0074e6"; 
             	document.getElementById('sign').style.backgroundColor = "#0074e6"; 
             	document.getElementById('cont').style.borderRight = "solid 1px #0074e6";
@@ -210,7 +210,7 @@
 
             }
 
-            else if(scroll_pos >= 7*(tamDiv*factor)){
+            else if(scroll_pos >= 7*(tamDiv)){
             	document.getElementById('login').style.backgroundColor = "#693b7b"; 
             	document.getElementById('sign').style.backgroundColor = "#693b7b"; 
             	document.getElementById('cont').style.borderRight = "solid 1px #693b7b"; 
