--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -40,9 +40,10 @@ legend {
   display: block;
   padding-left: 2px;
   padding-right: 20px;
+  font-size:26px;
   border: none;
   font-family: 'CaviarDreams';
-  width:220px;
+  width:270px;
   color:#d7006e;
   
   font-weight:bold;
