--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -123,11 +123,11 @@
 <div class="section">
 <div class="contact"  id="contact">
 	<div class="cont-bkgr">
-		<div class="cont-text">
+		<div class="cont-text" style="margin-left:5%;">
 			<u style="font-size:1.5em;">Contacto </u><br>
 			<p>Escríbenos a <b>movivan.peru@outlook.com</b> y con gusto nos contactaremos contigo</p>
 		</div>
-		<div class="cont-text" >
+		<div class="cont-text" style="margin-left:-13%;">
 			<u style="font-size:1.5em;">Carreras </u><br>
 			<p style="width:50%;">En Movivan nos mueve la pasión por la tecnología y la innovación y estamos en busca de talentos como tú para diversas disciplinas.<br>
 				Escríbenos a <b>carreras@movivan.pe</b></p>
