Fix contact footer and form

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -263,7 +263,7 @@ fieldset{
     font-family: 'CaviarDreams';
     font-weight: bolder;
     margin-top: 140px;
-    margin-left: 51px;
+    margin-left: 18%;
   }
   h2 {
     color:#777;
@@ -508,7 +508,7 @@ margin-top:200px;
   width: 100vw;
   height: 15%;
   background-color:$gray;
-  margin-top: 10%;
+  margin-top: 13%;
     top:0;bottom:0;
     left:0;right:0;
 }
