--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -25,9 +25,9 @@
       </style>
         <ul id="menu" style="width:100vw;color:#00BD00;text-align:left;margin-left:-400px;">
            <li>TÉRMINOS Y CONDICIONES DE SERVICIOS</li>
-           <li>MOVIVAN 2016 DERECHOS RESERVADOS. DISEÑO Y DIAGRAMACIÓN ICREAVISUAL</li>
+           <li>© 2016 Movivan, todos los derechos reservados</li>
            <li>POLÍTICAS DE PRIVACIDAD</li>
-           <li>
+           <li style="margin-left:80px;">
             <a href="/book" style="color:#00BD00;">LIBRO DE RECLAMACIONES</a>
             </li>
         </ul>
