--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -125,7 +125,7 @@
 	<div class="cont-bkgr">
 		<div class="cont-text" style="margin-left:5%;">
 			<u style="font-size:1.5em;">Contacto </u><br>
-			<p>Escríbenos a <b>movivan.peru@outlook.com</b> y con gusto nos contactaremos contigo</p>
+			<p><b>movivan.peru@outlook.com</b></p>
 		</div>
 		<div class="cont-text" style="margin-left:-13%;">
 			<u style="font-size:1.5em;">Carreras </u><br>
