--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -464,6 +464,7 @@ fieldset{
 }
 .book-desc{
   margin-top:35px;
+  margin-left:30px;
   width:100vw;
   font-family: 'CaviarDreams';
   font-size: 17px; 
@@ -476,6 +477,7 @@ fieldset{
   font-family: 'CaviarDreams';
   font-size: 17px; 
   margin-top:20px;
+  margin-left:30px;
 }
 
 .cont-text {
