--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,8 +27,13 @@
 
         </li>
 
-        <li class="but-head" id="login" style="left:-10px; widht:140px;"><%= link_to "Ingresa", "http://www.movivan.pe/auth/login" %></li>
-        <li class="but-head" id="sign"><%= link_to "Registra tu van", '/postulation'%></li>
+        <li class="but-head" id="login" style="left:-10px; widht:140px;">
+          <a  href="http://www.movivan.pe/auth/login">Ingresa</a>
+        </li>
+        <li class="but-head" id="sign">
+          <a  href="/postulation">Registra tu Van</a>
+          
+        </li>
       </ul>
     </nav>
   </div>
