--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -23,13 +23,14 @@
           margin-right:20px;
         }
       </style>
-        <ul id="menu" style="width:100vw;color:#00BD00;text-align:left;margin-left:-400px;">
-           <li>TÉRMINOS Y CONDICIONES DE SERVICIOS</li>
-           <li>© 2016 Movivan, todos los derechos reservados</li>
-           <li>POLÍTICAS DE PRIVACIDAD</li>
+        <ul id="menu" style="width:100vw;color:#00BD00;text-align:center;margin-left:-500px;font-size:16px;">
+           <li style="padding-right: 100px;">Términos y condiciones de servicios</li>
+           
+           <li style="border-right:solid 1px #00BD00;border-left: solid 1px #00BD00;padding-right: 100px;    padding-left: 100px;">Políticas de privacidad</li>
            <li style="margin-left:80px;">
-            <a href="/book" style="color:#00BD00;">LIBRO DE RECLAMACIONES</a>
+            <a href="/book" style="color:#00BD00;">Libro de Reclamaciones</a><br>
             </li>
+            <li style="line-height: 25px;margin-right: 20px;">© 2016 Movivan, todos los derechos reservados</li>
         </ul>
             
     </h2>
