--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -29,7 +29,21 @@
 			<div class="about-bkgr">
 				<div class="video-container">
                         <div class="video">
-                            <iframe width="580" height="360" src="https://www.youtube.com/embed/who5eJU7KQo" frameborder="0"></iframe>
+                            <iframe width="580" height="360" src="https://www.youtube.com/embed/who5eJU7KQo" frameborder="0" id="myFrame"></iframe>
+                            <script type="text/javascript">
+                            	window.onload = function(){
+    								var iframe = document.getElementById("myFrame");
+    								var index  = Math.floor(Math.random()*2)+1;
+    								if (index == 1){
+    									
+    									iframe.src = "https://www.youtube.com/embed/DySEpoj6u74";
+    								}
+    								else if(index == 2){
+    									
+    									iframe.src = "https://www.youtube.com/embed/fMh2WDqBia0";
+    								}
+								};
+                            </script>
                         </div>
 
                     </div>
@@ -125,7 +139,7 @@
 	<div class="cont-bkgr">
 		<div class="cont-text" style="margin-left:5%;">
 			<u style="font-size:1.5em;">Contacto </u><br>
-			<p>Escríbenos a <b>movivan.peru@outlook.com</b> y con gusto nos contactaremos contigo a la brevedad.</p>
+			<p>Escríbenos a <b>contacto@movivan.pe</b> y con gusto nos contactaremos contigo a la brevedad.</p>
 		</div>
 		<div class="cont-text" style="margin-left:-13%;">
 			<u style="font-size:1.5em;">Carreras </u><br>
