--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -17,7 +17,11 @@
 		</p>
 		<li class="reg-but bar fadeInUp">
 			<%= link_to "Regístrate aquí", "http://www.movivan.pe/auth/signup" %>
+
 		</li>
+		<p class="page-slogan bar fadeInUp" style="margin-top:20px;">
+			Próximamente en App Store
+		</p>
     	
 	</div>
 </div>
