--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -136,16 +136,15 @@ fieldset{
   display: block;  
   right: 0; 
   bottom: 0;
-  max-height:200vh;
-  max-width:200vw;
-  min-width:100vw;
-  min-height:100vh;
+  top:0;
+  max-width:100vw;
+  max-height:100vh;
   width: 100vw;   
-  height: 100vh;  
+  height: 100%;  
   z-index: 1;
   margin: 0 auto;
   object-fit: cover;
-  padding: 0;
+  padding: 0 auto;
   position:relative;
   overflow:hidden;
     
@@ -155,13 +154,12 @@ fieldset{
   
   display: block;
   position: relative;
-  top: 50%;
+  top:50%;
   left: 50%;
-  
-  max-width: 100%;
+  object-fit:fill;
   max-height: 100vh;
   width: auto;
-  height: auto;
+  height: 100%;
   z-index: -100;
   -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
@@ -171,7 +169,7 @@ fieldset{
     -moz-transform: translateX(-50%) translateY(-50%);
     -ms-transform: translateX(-50%) translateY(-50%);
     -o-transform: translateX(-50%) translateY(-50%);
-    object-fit: cover;
+    
     right: 0; bottom: 0;
   min-width: 100%; min-height: 100%;
   
